<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/gradientHeader"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gradient_background"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/white_rounded_background"
        android:paddingTop="20dp"
        android:paddingBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:id="@+id/formContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/white_rounded_background"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/gradientText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LuxeVista Resort"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_details_below_free_sign_up"
                android:textColor="@color/dark_gray"
                android:textSize="12sp"
                android:textStyle="italic" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smal_dis"
                android:text="@string/your_name"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smal_dis"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/name"
                android:padding="12dp"
                android:textColor="#212121"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smal_dis"
                android:text="@string/your_email"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smal_dis"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/email"
                android:padding="12dp"
                android:textColor="#212121"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smal_dis"
                android:text="@string/password"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smal_dis"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_border"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textColor="#212121"
                    android:textSize="16sp" />


            </LinearLayout>

        </LinearLayout>

        <!-- Login Button -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/formContainer">

            <TextView
                android:id="@+id/btnCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/blue_button_background"
                android:gravity="center"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </com.google.android.material.card.MaterialCardView>


        <LinearLayout
            android:id="@+id/ll_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkBoxAgree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:buttonTint="@color/dark_gray" />

            <TextView
                android:id="@+id/textViewTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="5dp"
                android:text="@string/term_condition"
                android:textColor="@color/darkest_gray"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_checkBox">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="#757575"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/signUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in_"
                android:textColor="@color/purple"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>